--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Ride object at 0x7fef54171cc0>\n"
+     ]
+    }
+   ],
    "source": [
     "first_ride = Ride()\n",
     "print(first_ride)"
