--- a/index.ipynb
+++ b/index.ipynb
@@ -173,11 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Ride'>\n",
+      "<__main__.Ride object at 0x7fef54171cc0>\n"
+     ]
+    }
+   ],
    "source": [
     "print(Ride)\n",
     "print(first_ride)"
